@@ -187,9 +187,9 @@ public class MBMessageFlagPersistenceImpl extends BasePersistenceImpl<MBMessageF
 
 		FinderCacheUtil.putResult(FINDER_PATH_FETCH_BY_U_M_F,
 			new Object[] {
-				new Long(mbMessageFlag.getUserId()),
-				new Long(mbMessageFlag.getMessageId()),
-				new Integer(mbMessageFlag.getFlag())
+				Long.valueOf(mbMessageFlag.getUserId()),
+				Long.valueOf(mbMessageFlag.getMessageId()),
+				Integer.valueOf(mbMessageFlag.getFlag())
 			}, mbMessageFlag);
 	}
 
@@ -236,9 +236,9 @@ public class MBMessageFlagPersistenceImpl extends BasePersistenceImpl<MBMessageF
 
 		FinderCacheUtil.removeResult(FINDER_PATH_FETCH_BY_U_M_F,
 			new Object[] {
-				new Long(mbMessageFlag.getUserId()),
-				new Long(mbMessageFlag.getMessageId()),
-				new Integer(mbMessageFlag.getFlag())
+				Long.valueOf(mbMessageFlag.getUserId()),
+				Long.valueOf(mbMessageFlag.getMessageId()),
+				Integer.valueOf(mbMessageFlag.getFlag())
 			});
 	}
 
@@ -286,7 +286,7 @@ public class MBMessageFlagPersistenceImpl extends BasePersistenceImpl<MBMessageF
 			session = openSession();
 
 			MBMessageFlag mbMessageFlag = (MBMessageFlag)session.get(MBMessageFlagImpl.class,
-					new Long(messageFlagId));
+					Long.valueOf(messageFlagId));
 
 			if (mbMessageFlag == null) {
 				if (_log.isWarnEnabled()) {
@@ -346,9 +346,9 @@ public class MBMessageFlagPersistenceImpl extends BasePersistenceImpl<MBMessageF
 
 		FinderCacheUtil.removeResult(FINDER_PATH_FETCH_BY_U_M_F,
 			new Object[] {
-				new Long(mbMessageFlagModelImpl.getUserId()),
-				new Long(mbMessageFlagModelImpl.getMessageId()),
-				new Integer(mbMessageFlagModelImpl.getFlag())
+				Long.valueOf(mbMessageFlagModelImpl.getUserId()),
+				Long.valueOf(mbMessageFlagModelImpl.getMessageId()),
+				Integer.valueOf(mbMessageFlagModelImpl.getFlag())
 			});
 
 		EntityCacheUtil.removeResult(MBMessageFlagModelImpl.ENTITY_CACHE_ENABLED,
@@ -394,9 +394,9 @@ public class MBMessageFlagPersistenceImpl extends BasePersistenceImpl<MBMessageF
 				(mbMessageFlag.getFlag() != mbMessageFlagModelImpl.getOriginalFlag()))) {
 			FinderCacheUtil.removeResult(FINDER_PATH_FETCH_BY_U_M_F,
 				new Object[] {
-					new Long(mbMessageFlagModelImpl.getOriginalUserId()),
-					new Long(mbMessageFlagModelImpl.getOriginalMessageId()),
-					new Integer(mbMessageFlagModelImpl.getOriginalFlag())
+					Long.valueOf(mbMessageFlagModelImpl.getOriginalUserId()),
+					Long.valueOf(mbMessageFlagModelImpl.getOriginalMessageId()),
+					Integer.valueOf(mbMessageFlagModelImpl.getOriginalFlag())
 				});
 		}
 
@@ -406,9 +406,9 @@ public class MBMessageFlagPersistenceImpl extends BasePersistenceImpl<MBMessageF
 				(mbMessageFlag.getFlag() != mbMessageFlagModelImpl.getOriginalFlag()))) {
 			FinderCacheUtil.putResult(FINDER_PATH_FETCH_BY_U_M_F,
 				new Object[] {
-					new Long(mbMessageFlag.getUserId()),
-					new Long(mbMessageFlag.getMessageId()),
-					new Integer(mbMessageFlag.getFlag())
+					Long.valueOf(mbMessageFlag.getUserId()),
+					Long.valueOf(mbMessageFlag.getMessageId()),
+					Integer.valueOf(mbMessageFlag.getFlag())
 				}, mbMessageFlag);
 		}
 
@@ -503,7 +503,7 @@ public class MBMessageFlagPersistenceImpl extends BasePersistenceImpl<MBMessageF
 				session = openSession();
 
 				mbMessageFlag = (MBMessageFlag)session.get(MBMessageFlagImpl.class,
-						new Long(messageFlagId));
+						Long.valueOf(messageFlagId));
 			}
 			catch (Exception e) {
 				throw processException(e);
